package applicazione.strategy.sort;
import dominio.Film;
import java.util.*;

public interface SortStrategy extends Comparator<Film> {
}
